--- a/husky_sheets/package.json
+++ b/husky_sheets/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.6",
     "typescript": "^5.4.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "buffer": "^6.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
