--- a/husky_sheets/package.json
+++ b/husky_sheets/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.3.0",
     "buffer": "^6.0.3",
     "react": "^18.3.1",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
