--- a/Server/husksheets/build.gradle
+++ b/Server/husksheets/build.gradle
@@ -12,6 +12,13 @@ java {
 	sourceCompatibility = '17'
 }
 
+test {
+    finalizedBy jacocoTestReport // report is always generated after tests run
+}
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+}
+
 repositories {
 	mavenCentral()
 }
