--- a/Server/husksheets/build.gradle
+++ b/Server/husksheets/build.gradle
@@ -36,3 +36,7 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+tasks.jar {
+	manifest.attributes["Main-Class"] = "com.valid.husksheets.HusksheetsApplication"
+}
