--- a/husky_sheets/package.json
+++ b/husky_sheets/package.json
@@ -54,6 +54,11 @@
     "jest": "^29.7.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5"
+  },
+
+  "jest": {
+    "setupFiles": ["<rootDir>/jest.setup.js"]
   }
+
   
 }
