--- a/husky_sheets/package.json
+++ b/husky_sheets/package.json
@@ -15,6 +15,8 @@
     "buffer": "^6.0.3",
     "gridjs": "^6.2.0",
     "gridjs-react": "^6.1.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.7",
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
@@ -51,6 +53,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^6.4.5",
+    "bcryptjs": "^3.0.3",
     "jest": "^29.7.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5"
